Update 6. error handling.ipynb

--- a/6. error handling.ipynb
+++ b/6. error handling.ipynb
@@ -9,7 +9,7 @@
     "If a python code encounter an error, it terminates. There is a way how to handle it - tell Python what to do if some type of error is encountered. For this porpouse, we can use these statements:\n",
     "<li> try: test this code for an error\n",
     "<li> except: if there is an error, handle it\n",
-    "<li> else: if thre is no error, run a specific code\n",
+    "<li> else: if there is no error, run a specific code\n",
     "<li> finally: regardless of the fact there was an error or not, run this code <br>\n",
     "\n",
     "You can tell Python what to do if a specific type of error occurs.\n",
