--- a/6. error handling.ipynb
+++ b/6. error handling.ipynb
@@ -15,6 +15,7 @@
     "You can tell Python what to do if a specific type of error occurs.\n",
     "This errors might be:\n",
     "<li> NameError\n",
+    "<li> SyntaxError\n",
     "<li> TypeError\n",
     "<li>AssertionError\n",
     "<li>AttributeError\n",
